tests/NormalTests/paczka2/big_fuzzy/60211123.err
Error in line 1: gH2iw S648 32,4
Error in line 9: gqlSNZ S291 90,1
Error in line 12: M23pSie S291 89,6
Error in line 3: Dnlb170S S648 11,3
Error in line 28: M23pSie A23 79,2
Error in line 27: t5tv S291 71,8
Error in line 30: M23pSie S291 3,9
Error in line 48: M23pSie S648 24,7
Error in line 53: M23pSie S291 79,2
Error in line 59: M23pSie A23 64,52
Error in line 58: M23pSie S648 16,7
Error in line 64: M23pSie S242 24,4
Error in line 70: gqlSNZ S648 0,3
Error in line 81: t5tv S648 61,8
Error in line 82: t5tv S291 41,5
Error in line 89: M23pSie S648 75,0
Error in line 88: t5tv A23 41,6
Error in line 83: S648 S242 11,4
Error in line 103: S648 S648 17,4
Error in line 104: S648 S291 36,6
Error in line 93: gqlSNZ S291 63,1
Error in line 110: S648 S291 70,48
Error in line 106: S648 S242 94,3
Error in line 112: Dnlb170S S242 54,6
Error in line 115: t5tv A23 66,8
Error in line 126: t06Ly A23 362,7
Error in line 131: Dnlb170S A23 8,07
Error in line 128: gqlSNZ S291 4,8
Error in line 154: Dnlb170S S242 30,6
Error in line 147: gqlSNZ S648 13,7
Error in line 165: t5tv A23 47,6
Error in line 167: t5tv S648 19,1
Error in line 163: Dnlb170S S648 88,7
Error in line 172: Dnlb170S S291 12,4
Error in line 161: gH2iw A23 23,8
Error in line 174: t5tv A23 55,7
Error in line 180: S648 S648 48,5
Error in line 190: t06Ly S648 229,1
Error in line 195: gH2iw S242 21,87
Error in line 198: t06Ly A23 61,73
Error in line 199: t5tv S291 94,9
Error in line 192: S648 S242 90,4
Error in line 203: M23pSie S291 66,9
Error in line 197: gH2iw S291 16,5
Error in line 216: Dnlb170S A23 40,7
Error in line 230: t5tv S648 4,8
Error in line 232: t06Ly A23 353,2
Error in line 236: S648 S648 21,2
Error in line 233: t5tv S242 82,2
Error in line 246: S648 S242 -4,2
Error in line 248: Dnlb170S A23 9,6
